fix toggle tap, reduce column gap, center cards

--- a/style.css
+++ b/style.css
@@ -193,13 +193,18 @@ body {
 .sections-track {
     display: flex;
     width: 200%;
-    gap: 4rem;
     will-change: transform;
 }
 
 .sections-track > section {
-    width: calc(50% - 2rem);
+    width: 50%;
     flex-shrink: 0;
+    padding-right: 2rem;
+}
+
+.sections-track > section:last-child {
+    padding-right: 0;
+    padding-left: 2rem;
 }
 
 .music h2,
